# 2Q1K-ChessGame

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ai_link.txt  scr2_link.txt
.github/workflows/: ci.yml  release.yml
src/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Player.cpp  Player.h  main.cpp
tests/: CMakeLists.txt  test_game.cpp
